# stoel

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  stoel.db
stoel/: config.py  crud.py  database.py  main.py  model.py  schemas.py  session.py
teleslet/: main.py
tests/: test_speedtest.py
