[tool.poetry]
name = "teleslet"
version = "0.1.0"
description = "Bandwidth measurement tool."
authors = ["Jan Willems <jw@elevenbits.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
